商品詳細表示機能

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -129,7 +129,7 @@
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
       <li class='list'>
       <% @items.each do |item|%>
-        <%= link_to "new_itmes_path" do %>
+        <%= link_to item_path(item.id) do %>
         <div class='item-img-content'>
           <%= image_tag item.image, class: "item-img" if item.image.attached? %>
 
@@ -160,7 +160,7 @@
       <%# 商品がない場合のダミー %>
       <%# 商品がある場合は表示されないようにしましょう %>
       <li class='list'>
-        <%= link_to 'new_items_path' do %>
+        <%= link_to new_item_path do %>
         <% end %>
       </li>
       <%# //商品がある場合は表示されないようにしましょう %>
