--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -124,16 +124,16 @@
   <div class='item-contents'>
     <h2 class='title'>ピックアップカテゴリー</h2>
     <%= link_to '新規投稿商品', new_item_path, class: "subtitle" %>
-    <ul class='item-lists'>
-
+     <ul class='item-lists'>
+      <% @items.each do |item|%>
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
       <li class='list'>
-      <% @items.each do |item|%>
         <%= link_to item_path(item.id) do %>
         <div class='item-img-content'>
           <%= image_tag item.image, class: "item-img" if item.image.attached? %>
 
           <%# 商品が売れていればsold outを表示しましょう %>
+           <% if item.order != nil %>                                                                                                                                                   
           <div class='sold-out'>
             <span>Sold Out!!</span>
           </div>
@@ -156,7 +156,7 @@
         <% end %>
       </li>
       <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
-
+    <% end %>
       <%# 商品がない場合のダミー %>
       <%# 商品がある場合は表示されないようにしましょう %>
       <li class='list'>
